# bachelors-project

./: .gitignore  .pylintrc  compare_resolvers.py  main.py  pyproject.toml  run_batch_optimization.py  train_and_switch_models.py  train_classifier.py  train_rl_agent.py
app/: application.py
config/: __init__.py  app_settings.py  config.py  delivery_settings.py  ml_model_config.pkl  optimization_settings.py  paths.py  settings.py
core/: view_helper.py  viewmodel.py
data/: graph_manager.py
logic/: base_delivery_optimizer.py  delivery_optimizer.py  greedy_delivery_optimizer.py  heuristics.py  routing.py  tsp_solver.py
models/: __init__.py  delivery.py  delivery_model.py  driver_model.py
models/entities/: delivery.py  disruption.py  driver.py
models/resolvers/: actions.py  classifier_based_resolver.py  feature_extraction.py  js_interface.py  ml_classifier_resolver.py  resolver.py  rule_based_resolver.py  simulation_controller.py  (+1 more)
resources/: adjusted_travel_times.csv  map.html
saved_configurations/: deliveries_125_Paris_20250514_224546.json  deliveries_250_Paris_20250514_224540.json  deliveries_50_Paris_20250514_224554.json  drivers_10_20250514_224558.json  drivers_2_20250514_224608.json  drivers_5_20250514_224604.json
services/: geolocation_service.py
ui/: main_window.py  map_widget.py  workers.py
utils/: distance_utils.py  geo_utils.py  geolocation.py  map_utils.py  ml_data_generator.py  ml_trainer.py  resolver_comparison.py  route_color_manager.py  route_utils.py  ui_component.py  ui_styles.py  visualization.py
viewmodels/: delivery_viewmodel.py  disruption_viewmodel.py  driver_viewmodel.py  map_viewmodel.py  optimization_viewmodel.py  viewmodel_messenger.py  visualization_viewmodel.py
workers/: disruption_generation_worker.py  disruption_resolution_worker.py  graph_loader.py
(+55 files in other folders)
